welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: not found: value A
if (A) { 
    ^BDRBuggle:4: error: not found: value B
} else if (B) {
           ^BDRBuggle:6: error: not found: value C
} else if (C) {
           ^BDRBuggle:8: error: not found: value R
} else if (R) {
           ^BDRBuggle:11: error: not found: value L
} else if (L) {
           ^BDRBuggle:14: error: not found: value I
} else if (I) {
           ^BDRBuggle:18: error: not found: value Z
} else if (Z) {
           ^BDRBuggle:20: error: not found: value Y
} else if (Y) {
           ^BDRBuggle:22: error: not found: value X
} else if (X) {
           ^